# classify_chimeras

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
classify_chimeras/: __init__.py  stencil_1d.py  stencil_2d.py
notebooks/: Example_Kuramoto_Chimera.ipynb
src/classify_chimeras/: __init__.py  example.py  stencil_1d.py  stencil_2d.py  utils.py
tests/: test_main.py  test_utils.py
