[metadata]
name = classify_chimeras
version = 1.6.0
author = Felix P. Kemeth
author_email = felix@kemeth.de
description = Chimera states in nonlocally-coupled phase oscillators
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/fkemeth/classify_chimeras
project_urls =
    Bug Tracker = https://github.com/fkemeth/classify_chimeras/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
