[metadata]
name = classify_chimeras
version = 2.0.1
description = Chimera states in nonlocally-coupled phase oscillators
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/fkemeth/classify_chimeras
author = Felix P. Kemeth
author_email = felix@kemeth.de
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/fkemeth/classify_chimeras/issues

[options]
packages = find:
python_requires = >=3.6
package_dir =
    = src

[options.packages.find]
where = src
